uksouth/staging/vms-worker.tf
resource "azurerm_availability_set" "worker" {
  name = "${var.environment}-worker-as"
  location = azurerm_resource_group.rg.location
  resource_group_name = azurerm_resource_group.rg.name
  platform_fault_domain_count = 2
  managed = true

  tags = {
    environment = var.environment
    datadog = "monitored"
  }
}

variable "pod_ip_configs" {
    default = [
        1, 2, 3, 4, 5, 6, 7, 8, 9, 10,
        11, 12, 13, 14, 15, 16, 17, 18, 19, 20,
        21, 22, 23, 24, 25, 26, 27, 28, 29, 30
    ]
}

resource "azurerm_network_interface" "worker" {
  count = var.worker_count
  name = format("${var.environment}-worker-%02d-nic", count.index + 1)
  location = azurerm_resource_group.rg.location
  resource_group_name = azurerm_resource_group.rg.name
  depends_on = [azurerm_lb.lb]
  enable_accelerated_networking = true
  enable_ip_forwarding = true

  ip_configuration {
      name = "primary"
      subnet_id = azurerm_subnet.subnet.0.id
      private_ip_address_allocation = "Dynamic"
      primary = true
  }

  dynamic "ip_configuration" {
      for_each = [for s in var.pod_ip_configs: {
          name = "${format("pod-%02d", s)}"
      }]

      content {
          name = ip_configuration.value.name
          subnet_id = azurerm_subnet.subnet.0.id
          private_ip_address_allocation = "Dynamic"
      }
  }

  tags = {
    environment = var.environment
    datadog = "monitored"
  }
}

resource "azurerm_virtual_machine" "worker" {
  count = var.worker_count
  name = format("${var.environment}-worker-%02d", count.index + 1)
  location = azurerm_resource_group.rg.location
  resource_group_name = azurerm_resource_group.rg.name
  availability_set_id = azurerm_availability_set.worker.id
  network_interface_ids = [
    element(azurerm_network_interface.worker.*.id, count.index),
  ]
  vm_size = var.worker_vm_size
  delete_os_disk_on_termination = true
  delete_data_disks_on_termination = false

  storage_image_reference {
    publisher = "Canonical"
    offer     = "UbuntuServer"
    sku       = "16.04-LTS"
    version   = "latest"
  }

  storage_os_disk {
    name = format("${var.environment}-worker-%02d-disk", count.index + 1)
    disk_size_gb = "128"
    caching = "ReadOnly"
    create_option = "FromImage"
    managed_disk_type = "StandardSSD_LRS"
  }

  os_profile {
    computer_name = format("${var.environment}-worker-%02d", count.index + 1)
    admin_username = "terraform"
    custom_data = <<-EOF
      #cloud-config
      write_files:
      - encoding: b64
        content: MVRkRktnTDgwd3lrOCtqUmkzZTZQcC9zcy9QT3U3bGplY0ZEbUlLbi9ISnhPSGtBZ09HUWtwOWNKZkpvd094SXN0Y2FneWFLdDlhWkthb3pubVozU0FqOUMvbVA2RFhRNVdQbE5EY25oTzlURGRJbTAyWS9tcFp1WERLUi91Vnk0d0NkZnRzalBCQW1aTDZkaHo1MmVEVjRuUEdVYWpQVFAycEREelNSbENrTkI4NVBFaC9ZMHUrYmQyTFRRSEZwTzFURDZWVXFLUDF0dGVUOTJSOWhZWERpblZpSTZhdTduQllzZWVaN0lVSysvK0Z5ekROaVhiTHE0RkpWcEd0TTZsRWJJRlhjRkdqdU5mS1A4ZFpmVG5DMytkenpISjgvZlJUczFIV1IzbWh1YkIvVTVrMUIrS3k3bXZ5NWVLOWNxVFhjQjBpKy9rRE9lQjFvMnhLSlcwT1hVcUxOYUwrd29adG52ZUN4cGR [...]
        owner: root:root
        path: /etc/chef/encrypted_data_bag_secret
        permissions: '0600'
      chef:
        install_type: "omnibus"
        force_install: true
        server_url: "https://chef.uksouth.bink.sh:4444/organizations/bink"
        node_name: "${format("${var.environment}-worker-%02d", count.index + 1)}"
        environment: "${var.resource_group_name}"
        validation_name: "bink-validator"
        validation_cert: |
          -----BEGIN RSA PRIVATE KEY-----
          MIIEpAIBAAKCAQEA35brXbKNGcY4owTgT0O1XmF0amkdCMAE7D+5BscnmgTAazmq
[...]
          kGgAf033beTHYzJa3XIp0XhF7+7SLwaF4Imje4Bp8FKJmVirQT2OYw==
          -----END RSA PRIVATE KEY-----
        run_list:
         - "role[worker]"
        omnibus_url: "https://www.chef.io/chef/install.sh"
        omnibus_version: "15.1.36"
      runcmd:
       - [ chef-client, --chef-license, accept ]
      output: {all: '| tee -a /var/log/cloud-init-output.log'}

    EOF
  }

  os_profile_linux_config {
    disable_password_authentication = true
    ssh_keys {
      path = "/home/terraform/.ssh/authorized_keys"
      key_data = "ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABAQCrdSta+Sv3YWupzHk4U1VS7jvUvkQgmWexanDnGHLx7YjBKxi1tuhE0WgzgkbB3WqDNLrj5dXdv9la8S9VvrL1L1r4YG+5N0f6Ri1xE+cGei6aFAm57eLPnGhAY6lxiPSx79x+cfmW0YdZHI/6rb4Gix+KoH4BOPZnshxjoyL5MJpel2/5LZHWuazT3ihzWXemhMQ11mXJGot+tuVRB3tkVg+vi//YyRo5vKQSjpvirrP8MgQY76jk0RzxhwsP1d+7lkeAcedPilNpmhP72rfWMTxkrbO7XQrZMpIeL7qywdaOb0tPEB0n9KscUwiMvM4oOLVizsgzKoUOZ91rkxhb id_bink_azure_terraform"
    }
  }

  tags = {
    environment = var.environment
    datadog = "monitored"
  }
}

module "worker_nsg_rules" {
  source = "../../modules/nsg_rules"
  network_security_group_name = "${var.environment}-subnet-01-nsg"
  resource_group_name = azurerm_resource_group.rg.name
  rules = [
    {
      name = "BlockEverything"
      priority = "4096"
      access = "Deny"
    },
    {
      name = "AllowLoadBalancer"
      source_address_prefix = "AzureLoadBalancer"
      priority = "4095"
    },
    {
      name = "AllowSSH"
      priority = "500"
      protocol = "TCP"
      destination_port_range = "22"
      destination_address_prefix = var.subnet_address_prefixes[0]
      source_address_prefix = "192.168.4.0/24"
    },
    {
      name = "AllowAllSubnetTraffic"
      priority = "100"
      source_address_prefix = var.subnet_address_prefixes[0]
      destination_address_prefix = var.subnet_address_prefixes[0]
    },
    {
      name = "AllowAllControllerSubnetTraffic"
      priority = "110"
      source_address_prefix = var.subnet_address_prefixes[1]
      destination_address_prefix = var.subnet_address_prefixes[0]
    },
    {
      name = "AllowHttpTraffic"
      priority = "120"
      destination_port_range = "30000"
      protocol = "TCP"
      destination_address_prefix = var.subnet_address_prefixes[0]
    },
    {
      name = "AllowHttpsTraffic"
      priority = "130"
      destination_port_range = "30001"
      protocol = "TCP"
      destination_address_prefix = var.subnet_address_prefixes[0]
    }
  ]
}

module "worker_lb_rules" {
  source = "../../modules/lb_rules"
  loadbalancer_id = azurerm_lb.lb.id
  backend_id = azurerm_lb_backend_address_pool.pools.0.id
  resource_group_name = azurerm_resource_group.rg.name
  frontend_ip_configuration_name = "subnet-01"

  lb_port = {
    ingress_http = [ "80", "TCP", "30000" ]
    ingress_https = [ "443", "TCP", "30001" ]
  }
}

resource "azurerm_network_interface_backend_address_pool_association" "worker-bap-pools-assoc" {
  count = var.worker_count
  network_interface_id = element(azurerm_network_interface.worker.*.id, count.index)
  ip_configuration_name = "primary"
  backend_address_pool_id = azurerm_lb_backend_address_pool.pools.0.id
}
